--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.1
   image_picker: ^1.0.5
   firebase_storage: ^11.5.6
+  weekday_selector: ^1.1.0
 
 dev_dependencies:
   flutter_test:
