--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_storage: ^11.5.6
   weekday_selector: ^1.1.0
   uuid: ^4.2.2
+  cached_network_image: ^3.3.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
