--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   uuid: ^4.2.2
   cached_network_image: ^3.3.0
   dartz: ^0.10.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
