--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dartz: ^0.10.1
   google_fonts: ^6.1.0
   carousel_slider: ^4.2.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
