--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_fonts: ^6.1.0
   carousel_slider: ^4.2.1
   path: ^1.9.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
